--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.3",
     "antd-mobile": "^5.28.1",
+    "axios": "^1.3.4",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -39,5 +41,6 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
