--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^19.0.4"
+    "@ant-design/icons": "^5.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "sass": "^1.58.3"
   },
   "proxy": "http://localhost:8000"
 }
