feat: 🎸 Splited the step to two steps, and optimize the page

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
          "peerDependencies": false, 
          "packageDir": "./"
       }
-  ]  
+  ]
 },
   "env": {
     "browser": true
@@ -31,7 +31,9 @@
         "map": [
           ["@components", "./src/components"],
           ["@assets", "./src/assets"],
-          ["@containers", "./src/containers"]
+          ["@containers", "./src/containers"],
+          ["@utils", "./src/utils"],
+          ["@services", "./src/services"]
         ]
       }
     }
