--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd-mobile": "^5.28.1",
     "axios": "^1.3.4",
     "craco": "^0.0.3",
+    "csurf": "^1.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
@@ -47,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^19.0.4"
-  },
-  "proxy": "http://localhost:8000"
+    "eslint-config-airbnb": "^19.0.4",
+    "react-cookie": "^4.1.1"
+  }
 }
