--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.2.3",
     "antd-mobile": "^5.28.1",
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "craco": "^0.0.3",
     "csurf": "^1.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
