--- a/.eslintrc
+++ b/.eslintrc
@@ -13,14 +13,8 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js"]}],
     "react/react-in-jsx-scope": 0,
     "react/function-component-definition": 0,
-    "import/no-extraneous-dependencies": [
-      "error", {
-         "devDependencies": false, 
-         "optionalDependencies": false, 
-         "peerDependencies": false, 
-         "packageDir": "./"
-      }
-  ]
+    "import/no-extraneous-dependencies": 0,
+    "import/prefer-default-export": 0
 },
   "env": {
     "browser": true
