--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -23,7 +25,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.5",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.58.3",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
