--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-app-alias": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.2.11",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.5",
