--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.5",
+    "react-virtualized": "^9.22.3",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.58.3",
     "universal-cookie": "^4.0.4",
