--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-app-alias": "^2.2.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.11",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
+    "postcss-px-to-viewport-with-include": "^1.0.0",
     "react-cookie": "^4.1.1"
   }
 }
