feat: 🎸 Created academicworld page

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-svg": "^16.1.5",
     "react-virtualized": "^9.22.3",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.5.0",
     "sass": "^1.58.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
