--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^17.0.2",
     "react-app-alias": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-image-gallery": "^1.2.11",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.5",
