--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_twitter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xngwu1995.github.io/react_twitter",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
