--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
