feat: 🎸 Added gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react_twitter",
   "version": "0.1.0",
+  "homepage": "https://xngwu1995.github.io/react_twitter",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -37,7 +38,9 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
