--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "craco": "^0.0.3",
-    "csurf": "^1.11.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
@@ -23,12 +20,12 @@
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-svg": "^16.1.5",
     "react-virtualized": "^9.22.5",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.5.0",
     "sass": "^1.58.3",
-    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,12 +34,6 @@
     "test": "craco test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -58,7 +49,6 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "eslint-config-airbnb": "^19.0.4",
     "postcss-px-to-viewport-with-include": "^1.0.0",
     "react-cookie": "^4.1.1"
   }
