--- a/package.json
+++ b/package.json
@@ -4,24 +4,32 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "antd": "^5.2.3",
     "antd-mobile": "^5.28.1",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "craco": "^0.0.3",
+    "export-to-csv": "^1.4.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
+    "material-react-table": "^3.2.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-app-alias": "^2.2.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.2",
     "react-photo-view": "^1.2.3",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-svg": "^16.1.5",
+    "react-to-print": "^3.1.0",
     "react-virtualized": "^9.22.5",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.5.0",
